Replace finalize() with Cleaner in ScalableRWLock
ScalableRWLock.ReadersEntry used finalize() to clean up reader state
when threads die. On JDK 25, where finalize() is deprecated for removal
(JEP 421), finalizer scheduling may be delayed or unreliable, leaving
ghost reader entries with SRWL_STATE_READING state and causing writers
to spin forever in exclusiveLock().

Replace with java.lang.ref.Cleaner (available since JDK 9), which
provides more predictable cleanup timing. The CleanupAction captures
only the lock and AtomicInteger state — not the ReadersEntry itself —
so the entry can become phantom-reachable and trigger cleanup.